release 1.4 (08-2010)
- Fixed issue 572
  https://jersey.dev.java.net/issues/show_bug.cgi?id=572
  Propagate security context when making internal invocations to match URIs.
- Fixed issue 564
  https://jersey.dev.java.net/issues/show_bug.cgi?id=564
  Modified field injection so that injection will occur independent of the
  field value. Previously injection would only occur if the field value
  was null.
- Support @InjectParam, which has the same semantics as Jersey's @Inject
  but does not conflict with the JSR 330 version. Jersey's @Inject is now
  deprecated.
- Support for @ParentRef to injecting a parent into a sub-resource.
- Fixed issue 563
  https://jersey.dev.java.net/issues/show_bug.cgi?id=563
  When using the low-level Grizzly container injection of GrizzlyRequest
  and GrizzlyResponse are now supported as follows:
    @Context ThreadLocal<GrizzlyRequest> request
    @Context ThreadLocal<GrizzlyResponse> response
  The thread local is required because GrizzlyRequest/Response are classes,
  not interfaces, and therefore cannot be proxied using the Java proxy API.
- Fixed issue 562
  https://jersey.dev.java.net/issues/show_bug.cgi?id=562
  When ServletContainer.FEATURE_FILTER_FORWARD_ON_404 feature is set to true
  and Jersey forwards to the next filter in the chain then the response
  status code will be set to 200 before forwarding.
- JSONConfiguration.FEATURE_POJO_MAPPING ResourceConfig feature introduced
  to simplify Jackson POJO entity provider utilization
  Users no longer need to register the Jackson provider explicitly
- Jackson dependency upgraded to version 1.5.5 
- *Breaking change*: in order to prevent OSGi bundle reload issues
  we need to bundle JSR-311 API classes with the jersey-core module
- Integrated JRebel support from branch
  Introduced new experimental module (jersey-jrebel) + some necessary
  modifications in jersey-server to improve reloading support.
- Fixed issue 542
  https://jersey.dev.java.net/issues/show_bug.cgi?id=542