@@ -58,7 +58,9 @@ import com.sun.jersey.impl.ImplMessages;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.Method;
+import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.lang.reflect.TypeVariable;
 import java.util.Collections;
@@ -298,20 +300,7 @@ public class IntrospectionModeller {
     private static ReflectionHelper.ClassTypePair getGenericReturnType(
             Class concreteClass,
             Method m) {
-        final Type t = m.getGenericReturnType();
-        if (t instanceof TypeVariable) {
-            ReflectionHelper.ClassTypePair ct = ReflectionHelper.resolveTypeVariable(
-                    concreteClass,
-                    m.getDeclaringClass(),
-                    (TypeVariable)t);
-
-            if (ct != null) {
-                return ct;
-            }
-        }
-
-        ReflectionHelper.ClassTypePair ct = new ReflectionHelper.ClassTypePair(m.getReturnType(), t);
-        return ct;
+        return getGenericType(concreteClass, m.getDeclaringClass(), m.getReturnType(), m.getGenericReturnType());
     }
     
     private static final void workOutSubResourceMethodsList(
@@ -587,17 +576,9 @@ public class IntrospectionModeller {
             paramSource = Parameter.Source.ENTITY;
         }
 
-        if (paramType instanceof TypeVariable) {
-            ReflectionHelper.ClassTypePair ct = ReflectionHelper.resolveTypeVariable(
-                    concreteClass,
-                    declaringClass,
-                    (TypeVariable)paramType);
-
-            if (ct != null) {
-                paramType = ct.t;
-                paramClass = ct.c;
-            }
-        }
+        ReflectionHelper.ClassTypePair ct = getGenericType(concreteClass, declaringClass, paramClass, paramType);
+        paramType = ct.t;
+        paramClass = ct.c;
 
         return new Parameter(
                 annotations, paramAnnotation,
@@ -615,5 +596,66 @@ public class IntrospectionModeller {
         } catch (Exception ex) {
         }
         return null;
+    }
+
+    private static ReflectionHelper.ClassTypePair getGenericType(
+            final Class concreteClass,
+            final Class declaringClass,
+            final Class c,
+            final Type t) {
+        if (t instanceof TypeVariable) {
+            ReflectionHelper.ClassTypePair ct = ReflectionHelper.resolveTypeVariable(
+                    concreteClass,
+                    declaringClass,
+                    (TypeVariable)t);
+
+            if (ct != null) {
+                return ct;
+            }
+        } else if (t instanceof ParameterizedType) {
+            final ParameterizedType pt = (ParameterizedType)t;
+            final Type[] ptts = pt.getActualTypeArguments();
+            boolean modified =  false;
+            for (int i = 0; i < ptts.length; i++) {
+                ReflectionHelper.ClassTypePair ct =
+                        getGenericType(concreteClass, declaringClass, (Class)pt.getRawType(), ptts[i]);
+                if (ct.t != ptts[i]) {
+                    ptts[i] = ct.t;
+                    modified = true;
+                }
+            }
+            if (modified) {
+                ParameterizedType rpt = new ParameterizedType() {
+                    @Override
+                    public Type[] getActualTypeArguments() {
+                        return ptts.clone();
+                    }
+
+                    @Override
+                    public Type getRawType() {
+                        return pt.getRawType();
+                    }
+
+                    @Override
+                    public Type getOwnerType() {
+                        return pt.getOwnerType();
+                    }
+                };
+                return new ReflectionHelper.ClassTypePair((Class)pt.getRawType(), rpt);
+            }
+        } else if (t instanceof GenericArrayType) {
+            GenericArrayType gat = (GenericArrayType)t;
+            final ReflectionHelper.ClassTypePair ct =
+                    getGenericType(concreteClass, declaringClass, null, gat.getGenericComponentType());
+            if (gat.getGenericComponentType() != ct.t) {
+                try {
+                    Class ac = ReflectionHelper.getArrayClass(ct.c);
+                    return new ReflectionHelper.ClassTypePair(ac, ac);
+                } catch (Exception e) {
+                }
+            }
+        }
+
+        return new ReflectionHelper.ClassTypePair(c, t);
     }
 }
